--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "@heroicons/react": "^1.0.5",
     "formik": "^2.2.9",
     "next": "latest",
     "react": "^17.0.2",
