--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "@heroicons/react": "^1.0.5",
     "formik": "^2.2.9",
+    "mongoose": "^6.2.4",
     "next": "latest",
     "react": "^17.0.2",
     "react-datepicker": "^4.6.0",
