--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "next": "latest",
     "react": "^17.0.2",
     "react-datepicker": "^4.6.0",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "react-phone-number-input": "^3.1.46"
   },
   "devDependencies": {
     "@types/node": "17.0.4",
