--- a/package.json
+++ b/package.json
@@ -7,12 +7,14 @@
   },
   "dependencies": {
     "@heroicons/react": "^1.0.5",
+    "axios": "^0.26.0",
     "formik": "^2.2.9",
     "mongoose": "^6.2.4",
     "next": "latest",
     "react": "^17.0.2",
     "react-datepicker": "^4.6.0",
     "react-dom": "^17.0.2",
+    "react-hot-toast": "^2.2.0",
     "react-phone-number-input": "^3.1.46"
   },
   "devDependencies": {
