--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "@bradgarropy/next-seo": "^1.2.0",
     "@heroicons/react": "^1.0.5",
     "axios": "^0.26.0",
     "formik": "^2.2.9",
