--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "react-datepicker": "^4.6.0",
     "react-dom": "^17.0.2",
     "react-hot-toast": "^2.2.0",
-    "react-phone-number-input": "^3.1.46"
+    "react-phone-number-input": "^3.1.46",
+    "react-scroll": "^1.8.6"
   },
   "devDependencies": {
     "@types/node": "17.0.4",
