--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "@bradgarropy/next-seo": "^1.2.0",
     "@heroicons/react": "^1.0.5",
     "axios": "^0.26.0",
+    "date-fns": "^2.28.0",
     "formik": "^2.2.9",
     "next": "latest",
     "react": "^17.0.2",
+    "react-date-picker": "^8.4.0",
     "react-datepicker": "^4.6.0",
     "react-dom": "^17.0.2",
     "react-hot-toast": "^2.2.0",
